style: change style

--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -8,8 +8,28 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+
+  /* Firefox */
+  scrollbar-width: thin;
+  scrollbar-color: #140002 #ffffff;
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 15px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #ffffff;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #140002;
+  border-radius: 20px;
+  border: 7px none #ffffff;
 }
 
 body {
   font-family: sans-serif;
+  overflow-x: hidden;
 }
